--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 mq.env=javayz
 
-#¶©µ¥³¬Ê±Î´Ö§¸¶×Ô¶¯Ê§Ğ§-ËÀĞÅ¶ÓÁĞÏûÏ¢Ä£ĞÍ
+#è®¢å•è¶…æ—¶æœªæ”¯ä»˜è‡ªåŠ¨å¤±æ•ˆ-æ­»ä¿¡é˜Ÿåˆ—æ¶ˆæ¯æ¨¡å‹
 mq.kill.item.success.kill.dead.queue=${mq.env}.kill.item.success.kill.dead.queue
 mq.kill.item.success.kill.dead.exchange=${mq.env}.kill.item.success.kill.dead.exchange
 mq.kill.item.success.kill.dead.routing.key=${mq.env}.kill.item.success.kill.dead.routing.key
@@ -10,7 +10,7 @@ mq.kill.item.success.kill.dead.real.queue=${mq.env}.kill.item.success.kill.dead.
 mq.kill.item.success.kill.dead.prod.exchange=${mq.env}.kill.item.success.kill.dead.prod.exchange
 mq.kill.item.success.kill.dead.prod.routing.key=${mq.env}.kill.item.success.kill.dead.prod.routing.key
 
-#TTL¹ıÆÚÊ±¼äµ¥Î»Îªms£¬ÉèÖÃ10s·½±ã²âÊÔ
+#å•ä½ä¸ºms
 mq.kill.item.success.kill.expire=10000
-
+#å®šæ—¶ä»»åŠ¡è®¢å•å¤±æ•ˆæ—¶é—´ï¼Œå•ä½ç§’
 scheduler.expeire.orders.time=30
